  - CHG: allow recombination rate > 0.5 (adjust to 0.5 and issue a warning)
  - NEW: allow longarg names in option jump and jumpIfFalse in simuOpt.py
  - NEW: load fine-scale recombinate rate and set variable genDist in loaded
	HapMap populations. (loadHapMap.py)
  - CHG: polish tkInter and wxPython parameter input dialog.


version 0.8.5 - (Rev 1488) Apr 3, 2008
  - BUG: fix a bug that prevents a cloned simulator from evolving again.
  - NEW: add parameter numMale and sexMode to all offspring generator and
		mating schemes, to control the sex of offspring exactly.
  - NEW: add gene conversion to recombinator, using parameter convMode, convProb and convParam.
  - NEW: add convenience functions GenoStruTrait::distLeft and GenoStruTrait::lociLeft.
  - NEW: add random parent chooser without replacement and/or with alpha individuals,
		haplodiploidOffspringGenerator, monogamousMating, polygamousMating, alphaMating,
		and haplodiploidMating mating schemes.
  - NEW: add haplodiploid option to GenoStructure. Recombinator now handles such
		populations correctly.
  - CHG: make the subPop parameter of population() function obsolete.
  - CHG: add parameter gen, and make parameter end in simulator::evolve obsolete.


version 0.8.4 - (Rev 1456) Mar 8, 2008
  - NEW: add support for other posix systems like HP-UX
  - NEW: automatically download HapMap data in loadHapMap.py and simuAdmixture.py.
  - NEW: add two operators infoEval and infoExec that can be used to manipulate
	information fields during evolution.
  - NEW: operator stator popSize=True also calculates virtual subpop size using
		variable virtualPopSize.
  - BUG: fix a bug in the re-initialization of pyParentsChooser.
  - CHG: inheritTagger will inherit the first, instead of the second, information
		field from mother in TAG_Maternal mode.
  - CHG: population::numVirtualSubPop() returns 0 instead 1 when there is no
		virtual subpopulation.
  - NEW: allow multiple genotype in the same virtual subpopulation split by